added authorBook entity